[package]
name = "box-edge"
version = "0.1.0"
authors = ["ShenYang <shenyang.dai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
futures = "*"
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = "*"
regex = "*"
snap7-sys = "*"